--- a/.github/workflows/1024.yml
+++ b/.github/workflows/1024.yml
@@ -1,4 +1,4 @@
-name: Reply
+name: 1024-AutoReply
 
 on:
   workflow_dispatch: # 手动触发
@@ -8,21 +8,26 @@ on:
   schedule:
     - cron: '34 23 * * *'
 
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     
-    - name: Install system dependencies
-      run: |
+    - name: checkout actions
+      run : |
         sudo apt-get update
-        sudo apt-get -y install git python3-pip python3-setuptools
+        sudo apt-get -y install git
+        sudo apt-get -y install python3-pip
+        sudo apt-get -y install python3-setuptools
 
-    - name: Install Python packages
-      run: pip3 install requests onetimepass pillow
+    - name: install env
+      run :
 
-    - name: Run 1024.py script
+        pip3 install requests onetimepass pillow
+
+    - name: run 1024.py
       env:
         USER: ${{ secrets.USER }}
         PASSWORD: ${{ secrets.PASSWORD }}
@@ -32,4 +37,5 @@ jobs:
         CODEPASS: ${{ secrets.CODEPASS }}
         USERID: ${{ secrets.USERID }}
         APIKEY: ${{ secrets.APIKEY }}
-      run: python3 1024.py
+      run:
+        python3 1024.py
